--- a/index.html
+++ b/index.html
@@ -1,1 +1,149 @@
-﻿
+﻿<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <title>portfolio|bootstrap</title>
+  </head>
+  <body>
+
+<!--header section-->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light justify-content-between py-4">
+            <div class="container">
+            <a class="font-weight-bold navbar-brand" href="#">Portfolio</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Resume</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Portfolios</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Blogs</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contact</a>
+                </li>
+        
+              </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container">
+        <div class="row justify-content-between align-items-center">
+            <div class="col-md-5">
+                <h1>Hello I'M</h1>
+                <h1><span>MD IQBAL</span></h1>
+                <p>I am very much passionate about my work. I do my work in time.I take the responsibility of my own.I  make several website which is very much qualityfull said by the client side</p>
+                <button class="button">
+                    <a href="#">HIRE ME</a>
+                </button>
+            </div>
+            <div class="col-md-7">
+                <img src="images/iqbalbg1.png" class="w-100" alt="">
+            </div>
+        </div>
+    </div>
+    </header>
+<!--header section-->
+
+<!--biography-section-->
+    <section class="biography">
+        <div class="container mb-0">
+            <div class="row justify-content-center align-items-center">
+                <div class="col-md-7">
+                    <img src="images/iqbalbg2.png" class="w-100" alt="">
+                </div>
+                <div class="col-md-5">
+                    <h1>Biography</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit quia, consequatur deserunt voluptatem molestiae quae accusantium sit veniam. Optio molestias repellat provident quasi. Quae animi maiores perspiciatis obcaecati odit soluta.</p>
+                    <button class="button">
+                        <a href="#">Download CV</a>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
+<!--biography-section-->
+
+<!--latest work-->
+    <section class="latest-work mt-5">
+        <div class="container">
+            <h1 class="text-center py-5">Latest Work</h1>
+            <div class="row">
+                <div class="col-md-4">
+                    <img class="w-100" src="images/work-1.png" alt="">
+                </div>
+                <div class="col-md-4">
+                    <img class="w-100" src="images/work-2.jpg" alt="">
+                </div>
+                <div class="col-md-4">
+                    <img class="w-100" src="images/work-3.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+<!--latest work-->
+
+<!--footer-section-->
+    <footer>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="text-center align-items-center">
+                    <h1>What client are say</h1>
+                    <p>Bruch Moccy</p>
+                    <small>Founer and CEO alias</small>
+                    <p style="width: 500px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ratione sequi voluptas iure. Illum architecto nemo a molestiae ea atque explicabo voluptates deserunt cupiditate neque! Deleniti, quo similique? Earum, laboriosam!</p>
+                    <div class="message align-items-center justify-content-center d-flex">
+                        <div>
+                            <p class="text-white">Leave me a message in the</p>
+                        <h4 class="text-white">pkmdiqbal@gmail.com</h4>
+                        </div>
+                    </div>
+                        <div class="copyright d-flex align-items-end justify-content-center">
+                            <small>&copy; 2020 all reseved</small>
+                        </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+<!--footer-section-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  </body>
+</html>
